--- a/settings.ini
+++ b/settings.ini
@@ -37,6 +37,6 @@ status = 3
 user = khannay
 
 ### Optional ###
-# requirements = fastcore pandas
-# dev_requirements = 
+requirements = fastcore torch torchdiffeq matplotlib numpy 
+dev_requirements = nbdev
 # console_scripts =
