--- a/settings.ini
+++ b/settings.ini
@@ -6,7 +6,7 @@
 repo = paramfittorchdemo
 lib_name = %(repo)s
 version = 0.0.1
-min_python = 3.9
+min_python = 3.10
 license = apache2
 
 ### nbdev ###
@@ -37,6 +37,6 @@ status = 3
 user = khannay
 
 ### Optional ###
-requirements = fastcore torch torchdiffeq matplotlib numpy 
+requirements = fastcore torch torchdiffeq matplotlib numpy imageio
 dev_requirements = nbdev
 # console_scripts =
