adding pysindy dependency

--- a/settings.ini
+++ b/settings.ini
@@ -31,12 +31,12 @@ author = Kevin Hannay
 author_email = 13168556+khannay@users.noreply.github.com
 copyright = 2023 onwards, %(author)s
 description = How to use pytorch to fit parameters of differential equations
-keywords = nbdev jupyter notebook python
+keywords = nbdev jupyter notebook pytorch differential-equations ode 
 language = English
 status = 3
 user = khannay
 
 ### Optional ###
-requirements = fastcore torch torchdiffeq matplotlib numpy
+requirements = fastcore torch torchdiffeq matplotlib numpy scipy pysindy
 dev_requirements = nbdev
 # console_scripts =
